[package]
name = "interview_v0"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["rustls-tls", "json", "gzip", "brotli", "zstd", "deflate", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }